--- a/.github/workflows/main_eshopcanadaweb.yml
+++ b/.github/workflows/main_eshopcanadaweb.yml
@@ -21,17 +21,17 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build Web Project
-        run: dotnet build ./src/Web/Web.csproj --configuration Release
- 
-      - name: Publish Web Project
-        run: dotnet publish ./src/Web/Web.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: "${{env.DOTNET_ROOT}}/myapp"
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_298B6B5B08BE425F8CE7D6CD24848170 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2B557076F74B42D0893ADCA40022AAC3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_105DFA9A82F74F84A3E27E11125E979E }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6C77D39E213E4D6993F71E0C1F2CAE32 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6C9D599BDBA94675B10D5CEDF84E7AA2 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_563F4B934D09496C8177C4FD399218FF }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
