--- a/.github/workflows/main_eshopweb2.yml
+++ b/.github/workflows/main_eshopweb2.yml
@@ -25,13 +25,13 @@ jobs:
         run: dotnet build ./src/Web/Web.csproj --configuration Release
 
       - name: Publish Web Project
-        run: dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./src/Web/Web.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp1"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: "${{env.DOTNET_ROOT}}/myapp1"
 
   deploy:
     runs-on: windows-latest
