adding application insights, functions.

--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -3,19 +3,35 @@
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:5001/"
   },
-  "UseOnlyInMemoryDatabase": true,
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
+  "UseOnlyInMemoryDatabase": true,
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "System": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.ApplicationInsights": "Information",
+      "Microsoft.eShopWeb.PublicApi.CatalogItemEndpoints": "Information",
+      "ApplicationInsights": "Information"
     },
-    "AllowedHosts": "*"
-  }
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Error"
+      }
+    }
+  },
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=6443c35e-ba66-4757-833f-2e2b49906725;IngestionEndpoint=https://canadaeast-0.in.applicationinsights.azure.com/;ApplicationId=53f13644-ad4c-44ec-a4f4-d0135c2bc8ea",
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    }
+  },
+  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
 }
