--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -3,7 +3,7 @@
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:44315/"
   },
-   "UseOnlyInMemoryDatabase": true,
+  "UseOnlyInMemoryDatabase": true,
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
@@ -17,5 +17,6 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
-  }
+  },
+  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
 }
