Using azure databases

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -3,10 +3,10 @@
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:44315/"
   },
-  "UseOnlyInMemoryDatabase": true,
+  "UseOnlyInMemoryDatabase": false,
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
