--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -4,11 +4,11 @@
     "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CatalogBaseUrl": "",
-  "UseOnlyInMemoryDatabase": true,
+  "UseOnlyInMemoryDatabase": false,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
