Save order details to cosmos database.

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -18,5 +18,6 @@
     },
     "AllowedHosts": "*"
   },
-  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
+  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D",
+  "OrderReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
 }
