--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -33,5 +33,6 @@
       "Microsoft": "Warning"
     }
   },
-  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
+  "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D",
+  "OrderReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
 }
