Managing database connection strings using Azure key-vault.

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -4,10 +4,10 @@
     "webBase": "https://localhost:44315/"
   },
   "UseOnlyInMemoryDatabase": false,
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
+  //"ConnectionStrings": {
+  //  "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+  //  "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  //},
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
@@ -17,6 +17,13 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
+  },
+  "KeyVault": {
+    "KeyVaultURL": "https://eshoponwenkeyvalue.vault.azure.net/",
+    "ClientId": "27f581a2-fa77-4e04-8544-bfc7a049c4ac",
+    "DirectoryId": "b39468db-c7aa-4166-9957-f912c8cbaf6e",
+    "ClientSecret": "UQy8Q~eiP4zVQJY5QD2FKQmGRmbx.NAgq-p1japt"
+
   },
   "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D",
   "OrderReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
