--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -3,12 +3,12 @@
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:5001/"
   },
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
-  "CatalogBaseUrl": "",
   "UseOnlyInMemoryDatabase": false,
+  //"ConnectionStrings": {
+  //  "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+  //  "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  //},
+  "CatalogBaseUrl": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -24,6 +24,13 @@
         "Microsoft": "Error"
       }
     }
+  },
+  "KeyVault": {
+    "KeyVaultURL": "https://eshoponwenkeyvalue.vault.azure.net/",
+    "ClientId": "27f581a2-fa77-4e04-8544-bfc7a049c4ac",
+    "DirectoryId": "b39468db-c7aa-4166-9957-f912c8cbaf6e",
+    "ClientSecret": "UQy8Q~eiP4zVQJY5QD2FKQmGRmbx.NAgq-p1japt"
+
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
