--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -26,11 +26,14 @@
     }
   },
   "KeyVault": {
-    "KeyVaultURL": "https://eshoponwenkeyvalue.vault.azure.net/",
-    "ClientId": "27f581a2-fa77-4e04-8544-bfc7a049c4ac",
+    //"KeyVaultURL": "https://eshoponwenkeyvalue.vault.azure.net/",
+    //"ClientId": "27f581a2-fa77-4e04-8544-bfc7a049c4ac",
+    //"DirectoryId": "b39468db-c7aa-4166-9957-f912c8cbaf6e",
+    //"ClientSecret": "UQy8Q~eiP4zVQJY5QD2FKQmGRmbx.NAgq-p1japt",
+    "KeyVaultURL": "https://esowkv.vault.azure.net/",
+    "ClientId": "1e660e1c-62d6-40db-ba95-189907dbe209",
     "DirectoryId": "b39468db-c7aa-4166-9957-f912c8cbaf6e",
-    "ClientSecret": "UQy8Q~eiP4zVQJY5QD2FKQmGRmbx.NAgq-p1japt"
-
+    "ClientSecret": "HtD8Q~OALBSvk9mlzMbmKIVJgMYNBxFU-WTdObyS"
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
