--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -4,10 +4,10 @@
     "webBase": "https://localhost:44315/"
   },
   "UseOnlyInMemoryDatabase": false,
-  //"ConnectionStrings": {
-  //  "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-  //  "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  //},
+  "ConnectionStrings": {
+    "CatalogConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebdb;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:eshoponwebserver1.database.windows.net,1433;Initial Catalog=eshoponwebidentity;Persist Security Info=False;User ID=eshoponweb;Password=ESOW@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
@@ -29,5 +29,7 @@
     "ClientSecret": "HtD8Q~OALBSvk9mlzMbmKIVJgMYNBxFU-WTdObyS"
   },
   "OrderItemsReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderItemReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D",
-  "OrderReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D"
+  "OrderReserverFunctionUrl": "https://eshoponweborderitemsreserver.azurewebsites.net/api/OrderReserver?code=c9qMDNiN9BMr2OcZQ3-3nQLeU9rzVdY9WzlKua5a1r-EAzFuf2l_-A%3D%3D",
+  "OrderReserverServiceBusUrl": "Endpoint=sb://eshoponwebsbus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=XDlPEA7gIJWsd87H26T9ROHGQtMeALGh4+ASbIZL7AI=",
+  "OrderReserverServiceBusQueueName": "eshoponweborderqueue1"
 }
